demo/src/main/java/com/example/demo/principle/ocp/positive/BarChart.java
package com.example.demo.principle.ocp.positive;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 10:35:48
 * @Description
 */
public class BarChart extends AbstractChart {
    public void display() {
        System.out.println("-------柱形图展示--------");
    }

    public void create() {

    }
}
