demo/src/main/java/com/example/demo/principle/ocp/negative/BarChart.java
package com.example.demo.principle.ocp.negative;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 10:23:00
 * @Description 柱形图类
 */
public class BarChart {

    public void display(){
        System.out.println("----------柱形图展示---------");
    }
}
